trunk/Archive2/0d/bf4a6c8e52907b/output
+ clang++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:54:32: error: use of undeclared identifier 'a'
    write_log<INFO>(f, 1256.7);a // !!! !prints the address of f instead of
                               ^
1 error generated.
